Fix admin notice spacing

--- a/resources/assets/admin/css/admin_notices.scss
+++ b/resources/assets/admin/css/admin_notices.scss
@@ -59,3 +59,9 @@
     }
   }
 }
+
+#ff_notice_review_query + .ff_global_setting_wrap,
+#ff_notice_review_query + .ff_tools_wrap,
+.error_notice_ff_fluentform_pro_license + .ff_tools_wrap {
+  margin-top: 20px;
+}
